--- a/code/package.json
+++ b/code/package.json
@@ -6,7 +6,19 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "db:up": "docker-compose up -d",
+    "db:down": "docker-compose down",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "db:seed": "prisma db seed",
+    "db:reset": "prisma migrate reset --force",
+    "db:studio": "prisma studio",
+    "db:generate": "prisma generate",
+    "postinstall": "prisma generate"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
@@ -37,6 +49,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "latest",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -61,14 +74,18 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
+    "@prisma/client": "^5.22.0",
     "@tailwindcss/postcss": "^4.1.16",
+    "@types/bcryptjs": "^2.4.6",
     "@types/leaflet": "^1.9.21",
-    "@types/node": "^22",
+    "@types/node": "^22.19.1",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "prisma": "^5.22.0",
     "tailwindcss": "^4.1.16",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
