--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       POSTGRES_USER: ikri
       POSTGRES_PASSWORD: ikri123
       POSTGRES_DB: ikri
+      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "5432:5432"
     volumes:
