--- a/code/package.json
+++ b/code/package.json
@@ -64,6 +64,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "latest",
     "react-hook-form": "^7.66.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.3.0",
     "sonner": "^2.0.7",
