--- a/code/package.json
+++ b/code/package.json
@@ -61,7 +61,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
     "motion": "^12.23.24",
-    "next": "16.0.1",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "path": "0.12.7",
     "react": "^19.2.0",
