Description of what you changed

--- a/code/.env.example
+++ b/code/.env.example
@@ -6,4 +6,4 @@ DATABASE_URL="postgresql://ikri:ikri123@localhost:5432/ikri?schema=public"
 # DATABASE_URL="postgresql://user:password@your-db-host.com:5432/ikri?schema=public"
 
 # Next.js API URL
-NEXT_PUBLIC_API_URL="http://localhost:3000/api"
+NEXT_PUBLIC_API_URL="https://repo-ikri.vercel.app"
